add source and docs links to manifest

--- a/build.properties
+++ b/build.properties
@@ -6,3 +6,5 @@ label: Chart Extension
 luceeCoreVersion: 5.0.0.244-SNAPSHOT
 releaseType: server
 description: Chart Extension to integrate the tag cfchart into Lucee
+sourceUrl: https://github.com/lucee/extension-chart
+documentionUrl: https://docs.lucee.org/reference/tags/chart.html
